[FEATURE] add publicly & privately publish tab

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -113,7 +113,6 @@
   "blog.ui.description": "Description",
   "blog.ui.postSetting": "Article Settings",
   "blog.ui.video": "Video",
-  "command.label.currentPosition": "目前排序：{position}",
   "command.label.uploading": "Uploading",
   "common.event.loading": "Loading",
   "common.event.publishedSuccessfully": "Published Successfully",
@@ -142,11 +141,13 @@
   "common.label.confirmPassword": "Confirm Password",
   "common.label.consumption": "Consumption",
   "common.label.currentPassword": "Current Password",
+  "common.label.currentPosition": "目前排序：{position}",
   "common.label.dateRange": "Date Range",
   "common.label.day": "day",
   "common.label.discountDownPrice": "Discount Down Price",
   "common.label.draft": "Draft",
   "common.label.email": "Email",
+  "common.label.exportFields": "匯出欄位",
   "common.label.forgotPassword": "Forgot Password",
   "common.label.goToLogin": "Login",
   "common.label.holdingPoints": "Points",
@@ -209,6 +210,7 @@
   "common.label.resetPassword": "Reset Password",
   "common.label.roleAdmin": "Role",
   "common.label.roleSettings": "Role",
+  "common.label.roleType": "會員類型",
   "common.label.salePriceEndTime": "End Time of Sale",
   "common.label.salesPlan": "Sales",
   "common.label.selectAuthor": "選擇作者",
@@ -254,6 +256,7 @@
   "common.menu.programs": "Programs",
   "common.menu.promotionAdmin": "Promotion",
   "common.menu.salesAdmin": "Sales",
+  "common.menu.tempoDelivery": "節奏交付",
   "common.menu.voucherPlans": "Voucher Plans",
   "common.product.activityTicket": "Activity",
   "common.product.appointmentPlan": "Appointment",
@@ -273,8 +276,10 @@
   "common.status.orderRefund": "Refund",
   "common.status.orderSuccess": "Success",
   "common.status.orderUnpaid": "Unpaid",
-  "common.status.privatelyPublish": "Published Privately",
+  "common.status.privatelyPublish": "私密發佈",
+  "common.status.privatelyPublished": "Published Privately",
   "common.status.publicyPublish": "Published Publicly",
+  "common.status.publicyPublished": "已公開發佈",
   "common.status.published": "Published",
   "common.status.unpublished": "Unpublished",
   "common.term.account": "Account",
@@ -363,8 +368,10 @@
   "common.ui.deleteProgram": "Delete Course",
   "common.ui.deleted": "Deleted",
   "common.ui.detail": "Detail",
+  "common.ui.downloadMemberList": "下載名單",
   "common.ui.edit": "Edit",
   "common.ui.editPassword": "Edit Password",
+  "common.ui.export": "匯出",
   "common.ui.exportOrder": "Export",
   "common.ui.exportOrderDiscount": "Export Discounts",
   "common.ui.exportOrderLog": "Export Orders",
@@ -383,8 +390,8 @@
   "common.ui.previewContent": "Content",
   "common.ui.previewIntroduction": "Introduction",
   "common.ui.print": "Print",
-  "common.ui.privatelyPublish": "Privately Publish",
-  "common.ui.publiclyPublish": "Publicly Publish ",
+  "common.ui.privatelyPublished": "Privately Publish",
+  "common.ui.publiclyPublished": "Publicly Publish ",
   "common.ui.publish": "Publish",
   "common.ui.publishConfirmation": "Confirm Publish",
   "common.ui.register": "Register",
@@ -510,11 +517,15 @@
   "program.label.deleteProgram": "Delete Program",
   "program.label.duration": "Duration (minutes)",
   "program.label.introductionVideo": "Introduction Video",
+  "program.label.isIssuesOpen": "問題討論",
   "program.label.markIssueAs": "Mark as {status}",
+  "program.label.memberList": "學員名單",
+  "program.label.notDeliveryOnly": "僅顯示未交付",
   "program.label.notifyUpdate": "通知內容更新",
   "program.label.permissionType": "選擇內容觀看權限",
   "program.label.perpetualPlanType": "Perpetual Plan",
   "program.label.planDescription": "Plan Description",
+  "program.label.planField": "方案：",
   "program.label.planTitle": "Title",
   "program.label.programAbstract": "Program Abstract",
   "program.label.programContent": "Content",
@@ -526,10 +537,14 @@
   "program.label.programPublishingSettings": "Publish",
   "program.label.programSettings": "Settings",
   "program.label.programTitle": "Program Title",
+  "program.label.select": "選擇課程",
+  "program.label.selectDeliveryAt": "選擇啟用日期",
   "program.label.subscriptionPeriodType": "Period Type",
   "program.label.subscriptionPlan": "Subscription Plan",
   "program.label.subscriptionPlanType": "Subscription Plan",
   "program.label.unavailableForPastContent": "不可看過去內容",
+  "program.status.active": "開啟",
+  "program.status.closed": "關閉",
   "program.status.issueOpen": "Open",
   "program.status.issueSolved": "Solved",
   "program.text.confirmPrivatelyPublishedNotation": "Courses will not appear on the list, and courses will only be sold as private links.",
@@ -566,6 +581,8 @@
   "program.ui.createPlan": "Create Plan",
   "program.ui.deleteContent": "Delete Content",
   "program.ui.deleteSection": "Delete Section",
+  "program.ui.deliver": "啟用",
+  "program.ui.delivery": "交付課程",
   "program.ui.editProgram": "編輯課程",
   "program.ui.joinNow": "Join now",
   "program.ui.jumpTo": "Go to Tab",
@@ -576,7 +593,6 @@
   "program.ui.sortProgram": "Sort Program",
   "program.ui.uploadCaption": "Upload Caption",
   "program.ui.uploadVideo": "Upload Video",
-  "programPacakge.ui.connectProgram": "加入課程",
   "programPackage.label.delete": "刪除課程組合",
   "programPackage.label.generalSetting": "一般設定",
   "programPackage.label.isPublished": "是否開賣",
@@ -588,10 +604,14 @@
   "programPackage.status.notCompleteNotation": "未發佈，此課程組合並不會顯示在頁面上",
   "programPackage.status.publishedNotation": "現在你的課程組合已發佈，此課程組合會出現在頁面上。",
   "programPackage.status.unpublishedNotation": "你的課程組合未發佈，此課程組合並不會顯示在頁面上。",
+  "programPackage.term.people": "人",
   "programPackage.text.noProgramPackagePlan": "尚未訂定銷售方案",
   "programPackage.text.noTitle": "尚未填寫名稱",
   "programPackage.ui.allowTempoDelivery": "啟用節奏交付",
+  "programPackage.ui.connectProgram": "加入課程",
+  "programPackage.ui.createPlan": "建立方案",
   "programPackage.ui.createProgramPackage": "建立課程組合",
+  "programPackage.ui.editPlan": "編輯方案",
   "programPackage.ui.publish": "發售，課程組合上架後立即開賣",
   "programPackage.ui.subscription": "訂閱",
   "programPackage.ui.unpublish": "停售，此方案暫停對外銷售，並從課程組合中隱藏",
