--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -113,7 +113,6 @@
   "blog.ui.description": "圖文內容",
   "blog.ui.postSetting": "文章設定",
   "blog.ui.video": "影片內容",
-  "command.label.currentPosition": "目前排序：{position}",
   "command.label.uploading": "上傳中",
   "common.event.loading": "Đang tải",
   "common.event.publishedSuccessfully": "Đăng bài thành công",
@@ -142,11 +141,13 @@
   "common.label.confirmPassword": "Xác nhận mật khẩu",
   "common.label.consumption": "Mức tiêu dùng",
   "common.label.currentPassword": "Mật khẩu hiện tại",
+  "common.label.currentPosition": "目前排序：{position}",
   "common.label.dateRange": "Phạm vi ngày",
   "common.label.day": "Ngày",
   "common.label.discountDownPrice": "Giảm giá ",
   "common.label.draft": "Bản nháp",
   "common.label.email": "郵件地址",
+  "common.label.exportFields": "匯出欄位",
   "common.label.forgotPassword": "Quên mật khẩu",
   "common.label.goToLogin": "Đi đến đăng nhập ",
   "common.label.holdingPoints": "Giữ điểm",
@@ -209,6 +210,7 @@
   "common.label.resetPassword": "Làm lại mật khẩu",
   "common.label.roleAdmin": "Quản lý vai trò",
   "common.label.roleSettings": "Thiết lập vai trò",
+  "common.label.roleType": "會員類型",
   "common.label.salePriceEndTime": "Ngày chốt sale",
   "common.label.salesPlan": "Kế hoạch bán hàng",
   "common.label.selectAuthor": "選擇作者",
@@ -254,6 +256,7 @@
   "common.menu.programs": "Quản lý khóa học",
   "common.menu.promotionAdmin": "Quản lý chương trình khuyến mãi",
   "common.menu.salesAdmin": "Quản lý bán hàng",
+  "common.menu.tempoDelivery": "節奏交付",
   "common.menu.voucherPlans": "Kế hoạch voucher",
   "common.product.activityTicket": "Vé sự kiện",
   "common.product.appointmentPlan": "Đặt hẹn",
@@ -273,8 +276,10 @@
   "common.status.orderRefund": "Đã hoàn tiền",
   "common.status.orderSuccess": "Đã hoàn thành",
   "common.status.orderUnpaid": "Đợi thanh toán",
-  "common.status.privatelyPublish": "已私密發佈",
+  "common.status.privatelyPublish": "私密發佈",
+  "common.status.privatelyPublished": "已私密發佈",
   "common.status.publicyPublish": "已公開發佈",
+  "common.status.publicyPublished": "已公開發佈",
   "common.status.published": "Đã đăng tải",
   "common.status.unpublished": "Chưa đăng tải",
   "common.term.account": "Tài khoản",
@@ -363,8 +368,10 @@
   "common.ui.deleteProgram": "刪除課程",
   "common.ui.deleted": "已刪除",
   "common.ui.detail": "Chi tiết",
+  "common.ui.downloadMemberList": "下載名單",
   "common.ui.edit": "Chỉnh sửa",
   "common.ui.editPassword": "Sửa mật khẩu",
+  "common.ui.export": "匯出",
   "common.ui.exportOrder": "Xuất thông tin",
   "common.ui.exportOrderDiscount": "Chi tiết giảm giá",
   "common.ui.exportOrderLog": "Xuất đơn hàng",
@@ -383,8 +390,8 @@
   "common.ui.previewContent": "Nội dung xem trước",
   "common.ui.previewIntroduction": "Giới thiệu phần Xem trước",
   "common.ui.print": "In",
-  "common.ui.privatelyPublish": "私密發佈",
-  "common.ui.publiclyPublish": "公開發佈",
+  "common.ui.privatelyPublished": "私密發佈",
+  "common.ui.publiclyPublished": "公開發佈",
   "common.ui.publish": "Đăng bài ngay",
   "common.ui.publishConfirmation": "確定發佈",
   "common.ui.register": "Đăng ký",
@@ -510,11 +517,15 @@
   "program.label.deleteProgram": "Xóa khóa học",
   "program.label.duration": "Thời lượng nội dung (phút)",
   "program.label.introductionVideo": "Giới thiệu video",
+  "program.label.isIssuesOpen": "問題討論",
   "program.label.markIssueAs": "Đánh dấu là {status}",
+  "program.label.memberList": "學員名單",
+  "program.label.notDeliveryOnly": "僅顯示未交付",
   "program.label.notifyUpdate": "通知內容更新",
   "program.label.permissionType": "Chọn quyền xem nội dung",
   "program.label.perpetualPlanType": "Thanh toán một lận",
   "program.label.planDescription": "Mô tả kế hoạch",
+  "program.label.planField": "方案：",
   "program.label.planTitle": "Kế hoạch Tên",
   "program.label.programAbstract": "Tóm tắt khóa học",
   "program.label.programContent": "Nội dung khóa học",
@@ -526,10 +537,14 @@
   "program.label.programPublishingSettings": "Cài đặt đăng tải",
   "program.label.programSettings": "Cài đặt khóa học",
   "program.label.programTitle": "Tên khóa học",
+  "program.label.select": "選擇課程",
+  "program.label.selectDeliveryAt": "選擇啟用日期",
   "program.label.subscriptionPeriodType": "Chu kỳ đăng ký",
   "program.label.subscriptionPlan": "Kế hoạch đăng ký thanh toán",
   "program.label.subscriptionPlanType": "Đăng ký thanh toán ",
   "program.label.unavailableForPastContent": "Không thể xem nội dung cũ",
+  "program.status.active": "開啟",
+  "program.status.closed": "關閉",
   "program.status.issueOpen": "Đang giải quyết",
   "program.status.issueSolved": "Đã giải quyết",
   "program.text.confirmPrivatelyPublishedNotation": "課程將不會出現在列表，僅以私下提供連結的方式販售課程。",
@@ -566,6 +581,8 @@
   "program.ui.createPlan": "Lập kế hoạch",
   "program.ui.deleteContent": "Xóa nội dung",
   "program.ui.deleteSection": "Xóa bài học",
+  "program.ui.deliver": "啟用",
+  "program.ui.delivery": "交付課程",
   "program.ui.editProgram": "編輯課程",
   "program.ui.joinNow": "Tham gia ngay",
   "program.ui.jumpTo": "Điền thông tin",
@@ -576,7 +593,6 @@
   "program.ui.sortProgram": "Sắp xếp khóa học",
   "program.ui.uploadCaption": "Đăng tải phụ đề",
   "program.ui.uploadVideo": "Đăng tải video",
-  "programPacakge.ui.connectProgram": "加入課程",
   "programPackage.label.delete": "刪除課程組合",
   "programPackage.label.generalSetting": "一般設定",
   "programPackage.label.isPublished": "是否開賣",
@@ -588,10 +604,14 @@
   "programPackage.status.notCompleteNotation": "未發佈，此課程組合並不會顯示在頁面上",
   "programPackage.status.publishedNotation": "現在你的課程組合已發佈，此課程組合會出現在頁面上。",
   "programPackage.status.unpublishedNotation": "你的課程組合未發佈，此課程組合並不會顯示在頁面上。",
+  "programPackage.term.people": "人",
   "programPackage.text.noProgramPackagePlan": "尚未訂定銷售方案",
   "programPackage.text.noTitle": "尚未填寫名稱",
   "programPackage.ui.allowTempoDelivery": "啟用節奏交付",
+  "programPackage.ui.connectProgram": "加入課程",
+  "programPackage.ui.createPlan": "建立方案",
   "programPackage.ui.createProgramPackage": "建立課程組合",
+  "programPackage.ui.editPlan": "編輯方案",
   "programPackage.ui.publish": "發售，課程組合上架後立即開賣",
   "programPackage.ui.subscription": "訂閱",
   "programPackage.ui.unpublish": "停售，此方案暫停對外銷售，並從課程組合中隱藏",
