[BUGFIX] add program package plan limit time

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -403,6 +403,7 @@
   "common.ui.search": "Search",
   "common.ui.sendEmailAgain": "Send Again",
   "common.ui.trial": "Trial",
+  "commonMessages.term.unknownPeriod": "未知週期",
   "creator.label.creatorAppointments": "Appointment",
   "creator.label.creatorPodcast": "Podcast Program",
   "creator.label.creatorPrograms": "Program",
@@ -593,6 +594,7 @@
   "program.ui.sortProgram": "Sort Program",
   "program.ui.uploadCaption": "Upload Caption",
   "program.ui.uploadVideo": "Upload Video",
+  "programPackage.label.availableForLimitTime": "可觀看 {amount} {unit}",
   "programPackage.label.delete": "刪除課程組合",
   "programPackage.label.generalSetting": "一般設定",
   "programPackage.label.isPublished": "是否開賣",
