--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -403,6 +403,7 @@
   "common.ui.search": "Tìm kiếm",
   "common.ui.sendEmailAgain": "Gửi lại lần nữa",
   "common.ui.trial": "Xem thử",
+  "commonMessages.term.unknownPeriod": "未知週期",
   "creator.label.creatorAppointments": "Đặt lịch hẹn",
   "creator.label.creatorPodcast": "Podcast",
   "creator.label.creatorPrograms": "Mở khóa học",
@@ -593,6 +594,7 @@
   "program.ui.sortProgram": "Sắp xếp khóa học",
   "program.ui.uploadCaption": "Đăng tải phụ đề",
   "program.ui.uploadVideo": "Đăng tải video",
+  "programPackage.label.availableForLimitTime": "可觀看 {amount} {unit}",
   "programPackage.label.delete": "刪除課程組合",
   "programPackage.label.generalSetting": "一般設定",
   "programPackage.label.isPublished": "是否開賣",
