[FEATURE] add publish status

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -16,12 +16,9 @@
   "activity.status.finished": "Finished",
   "activity.status.hidden": "Hidden",
   "activity.status.holding": "Holding",
-  "activity.status.notPublished": "Not Published",
   "activity.status.notPublishedTicket": "Suspended.",
   "activity.status.public": "Show",
   "activity.status.publishedTicket": "Published.",
-  "activity.status.selling": "Selling",
-  "activity.status.soldOut": "Sold Out",
   "activity.status.starting": "Starting",
   "activity.term.description": "Description",
   "activity.term.includingSessions": "Including Sessions",
@@ -272,6 +269,7 @@
   "common.product.unknownType": "Unknown",
   "common.status.expired": "Expired",
   "common.status.notComplete": "Not Complete",
+  "common.status.notPublished": "Not Published",
   "common.status.orderFailed": "Failed",
   "common.status.orderRefund": "Refund",
   "common.status.orderSuccess": "Success",
@@ -281,6 +279,8 @@
   "common.status.publicyPublish": "Published Publicly",
   "common.status.publicyPublished": "已公開發佈",
   "common.status.published": "Published",
+  "common.status.selling": "Selling",
+  "common.status.soldOut": "Sold Out",
   "common.status.unpublished": "Unpublished",
   "common.term.account": "Account",
   "common.term.activityTicket": "Activity Ticket",
@@ -325,6 +325,7 @@
   "common.term.tags": "標籤",
   "common.term.teachingAssistant": "Teaching Assistant",
   "common.term.title": "Title",
+  "common.term.unknownPeriod": "Unknown Period",
   "common.term.unknownProduct": "Unknown Product",
   "common.term.unknownRole": "Unknown Role",
   "common.term.username": "Username or Email",
@@ -403,7 +404,6 @@
   "common.ui.search": "Search",
   "common.ui.sendEmailAgain": "Send Again",
   "common.ui.trial": "Trial",
-  "commonMessages.term.unknownPeriod": "未知週期",
   "creator.label.creatorAppointments": "Appointment",
   "creator.label.creatorPodcast": "Podcast Program",
   "creator.label.creatorPrograms": "Program",
@@ -449,7 +449,6 @@
   "merchandise.status.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
   "merchandise.status.publishedNotation": "現在你的商品已發佈，此商品會出現在頁面上。",
   "merchandise.status.selling": "販賣中",
-  "merchandise.status.soldOut": "已售完",
   "merchandise.status.unpublished": "未上架",
   "merchandise.status.unpublishedNotation": "你的商品未發佈，此商品並不會顯示在頁面上。",
   "merchandise.text.deleteDescription": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
