--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -16,12 +16,9 @@
   "activity.status.finished": "Đã kết thúc",
   "activity.status.hidden": "Không công khai",
   "activity.status.holding": "Đang tổ chức",
-  "activity.status.notPublished": "Chưa bán",
   "activity.status.notPublishedTicket": "Ngừng bán, loại vé này tạm dừng bán cho bên ngoài, đồng thời ẩn trong trang mua vé",
   "activity.status.public": "Công khai",
   "activity.status.publishedTicket": "Bán ra, bán ngay sau khi sự kiện được đăng tải",
-  "activity.status.selling": "Đang bán",
-  "activity.status.soldOut": "Đã bán hết",
   "activity.status.starting": "Hoạt động bắt đầu",
   "activity.term.description": "Mô tả ghi chú",
   "activity.term.includingSessions": "Bao gồm các phiên",
@@ -272,6 +269,7 @@
   "common.product.unknownType": "Chưa biết",
   "common.status.expired": "到期",
   "common.status.notComplete": "Còn danh mục chưa hoàn thành",
+  "common.status.notPublished": "尚未發售",
   "common.status.orderFailed": "Thanh toán trả phí",
   "common.status.orderRefund": "Đã hoàn tiền",
   "common.status.orderSuccess": "Đã hoàn thành",
@@ -281,6 +279,8 @@
   "common.status.publicyPublish": "已公開發佈",
   "common.status.publicyPublished": "已公開發佈",
   "common.status.published": "Đã đăng tải",
+  "common.status.selling": "販售中",
+  "common.status.soldOut": "已售完",
   "common.status.unpublished": "Chưa đăng tải",
   "common.term.account": "Tài khoản",
   "common.term.activityTicket": "Vé sự kiện",
@@ -325,6 +325,7 @@
   "common.term.tags": "標籤",
   "common.term.teachingAssistant": "Trợ giảng",
   "common.term.title": "Tên",
+  "common.term.unknownPeriod": "未知週期",
   "common.term.unknownProduct": "Phân loại chưa biết",
   "common.term.unknownRole": "Vai trò chưa biết",
   "common.term.username": "Tên hoặc email của người sử dụng",
@@ -403,7 +404,6 @@
   "common.ui.search": "Tìm kiếm",
   "common.ui.sendEmailAgain": "Gửi lại lần nữa",
   "common.ui.trial": "Xem thử",
-  "commonMessages.term.unknownPeriod": "未知週期",
   "creator.label.creatorAppointments": "Đặt lịch hẹn",
   "creator.label.creatorPodcast": "Podcast",
   "creator.label.creatorPrograms": "Mở khóa học",
@@ -449,7 +449,6 @@
   "merchandise.status.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
   "merchandise.status.publishedNotation": "現在你的商品已發佈，此商品會出現在頁面上。",
   "merchandise.status.selling": "販賣中",
-  "merchandise.status.soldOut": "已售完",
   "merchandise.status.unpublished": "未上架",
   "merchandise.status.unpublishedNotation": "你的商品未發佈，此商品並不會顯示在頁面上。",
   "merchandise.text.deleteDescription": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
