[FEATURE] modify column's title

--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -41,6 +41,10 @@
   "activity.ui.threshold": "Ít nhất",
   "activity.warning.selectSession": "Chọn phiên",
   "appointment.label.allInstructors": "Toàn bộ giảng viên",
+  "appointment.label.appointmentCanceledAt": "已於 {time} 取消預約",
+  "appointment.label.appointmentDate": "諮詢日期",
+  "appointment.label.appointmentIssue": "學員提問",
+  "appointment.label.appointmentResult": "諮詢重點紀錄",
   "appointment.label.createPeriod": "Lập thời gian",
   "appointment.label.duration": "Thời lượng (phút)",
   "appointment.label.enrollments": "Đã đặt hẹn",
@@ -61,6 +65,7 @@
   "appointment.label.status": "Trạng thái",
   "appointment.status.aboutToStart": "Sắp tổ chức",
   "appointment.status.available": "Được đặt hẹn",
+  "appointment.status.canceled": "已取消",
   "appointment.status.enrolled": "Đã đặt hẹn",
   "appointment.status.excluded": "Đã đóng",
   "appointment.status.finished": "Đã kết thúc",
@@ -71,6 +76,7 @@
   "appointment.term.periodType": "Lặp lại chu kỳ",
   "appointment.term.planTitle": "Tên kế hoạch",
   "appointment.term.startedAt": "Thời gian bắt đầu",
+  "appointment.text.appointmentResultNotation": "※此紀錄不會公開給學員看到",
   "appointment.text.durationTips": "Đặt thời lượng cho một buổi hẹn",
   "appointment.text.noDuration": "Chưa đặt thời lượng",
   "appointment.text.noListPrice": "Chưa đặt giá",
@@ -83,6 +89,7 @@
   "appointment.text.timezone": "時間以 {city} (GMT{timezone}) 顯示",
   "appointment.text.unpublishedNotation": "Kế hoạch đặt hẹn chưa đăng tải, kế hoạch sẽ không hiển thị trên trang, học viên không thể mua kế hoạch này",
   "appointment.ui.addToCalendar": "Thêm vào Calendar",
+  "appointment.ui.appointmentIssueAndResult": "提問紀錄單",
   "appointment.ui.appointmentText": "{name} 已預約你的「{title}」",
   "appointment.ui.close": "Đóng",
   "appointment.ui.createPlan": "Tạo lập kế hoạch",
@@ -110,6 +117,11 @@
   "blog.ui.description": "圖文內容",
   "blog.ui.postSetting": "文章設定",
   "blog.ui.video": "影片內容",
+  "code.E_EMAIL_EXISTS": "電子信箱已存在",
+  "code.E_INPUT": "輸入資料有誤",
+  "code.E_SEND_EMAIL": "寄送信件失敗",
+  "code.E_USERNAME_EXISTS": "使用者名稱已存在",
+  "code.SUCCESS": "成功",
   "command.label.uploading": "上傳中",
   "common.event.loading": "Đang tải",
   "common.event.publishedSuccessfully": "Đăng bài thành công",
@@ -139,8 +151,10 @@
   "common.label.consumption": "Mức tiêu dùng",
   "common.label.currentPassword": "Mật khẩu hiện tại",
   "common.label.currentPosition": "目前排序：{position}",
+  "common.label.date": "日期",
   "common.label.dateRange": "Phạm vi ngày",
   "common.label.day": "Ngày",
+  "common.label.days": "天",
   "common.label.discountDownPrice": "Giảm giá ",
   "common.label.draft": "Bản nháp",
   "common.label.email": "郵件地址",
@@ -182,6 +196,7 @@
   "common.label.orderLogId": "Mã đơn",
   "common.label.orderLogMemberEmail": "Email hội viên",
   "common.label.orderLogMemberName": "Họ tên hội viên",
+  "common.label.orderLogPaymentDate": "付款日期",
   "common.label.orderLogPrice": "Giá đơn hàng",
   "common.label.orderLogPriceTotal": "Tổng tiền đơn hàng",
   "common.label.orderLogStatus": "訂單狀態",
@@ -239,6 +254,7 @@
   "common.menu.merchandiseCategory": "商品分類",
   "common.menu.merchandiseIssues": "問答管理",
   "common.menu.merchandiseShipping": "出貨管理",
+  "common.menu.merchandiseShop": "商城管理",
   "common.menu.merchandises": "商品管理",
   "common.menu.ownerSettings": "Cài đặt quản trị viên",
   "common.menu.podcastAdmin": "Podcast",
@@ -256,6 +272,15 @@
   "common.menu.tempoDelivery": "節奏交付",
   "common.menu.voucherPlans": "Kế hoạch voucher",
   "common.product.activityTicket": "Vé sự kiện",
+  "common.product.allActivityTicket": "全部線下實體",
+  "common.product.allAppointmentPlan": "全部預約",
+  "common.product.allMerchandise": "全部商品",
+  "common.product.allPodcastPlan": "全部廣播訂閱頻道",
+  "common.product.allPodcastProgram": "全部廣播",
+  "common.product.allProgram": "全部單次課程",
+  "common.product.allProgramPackagePlan": "全部課程組合",
+  "common.product.allProgramPlan": "全部訂閱課程",
+  "common.product.allProjectPlan": "全部專案",
   "common.product.appointmentPlan": "Đặt hẹn",
   "common.product.card": "Thẻ hội viên",
   "common.product.merchandise": "Sản phẩm",
@@ -339,6 +364,7 @@
   "common.text.locale": "當前台為指定語系時才會顯示，若不選擇全語系皆顯示",
   "common.text.minutes": "{minutes} phút",
   "common.text.noAssignedInstructor": "Chưa chỉ định giảng viên",
+  "common.text.period": "，",
   "common.text.purchasedAt": "{Họ tên} mua vào {Ngày} ",
   "common.text.resetPasswordNotation": "Để bảo đảm an toàn, vui lòng gửi email đổi mật khẩu",
   "common.text.sentResetPasswordMail": "Đã gửi email đặt lại mật khẩu",
@@ -377,6 +403,7 @@
   "common.ui.exportOrderDiscount": "Chi tiết giảm giá",
   "common.ui.exportOrderLog": "Xuất đơn hàng",
   "common.ui.exportOrderProduct": "訂單明細",
+  "common.ui.exportProgramProgress": "匯出學習進度",
   "common.ui.facebookLogin": "Đăng nhập/ Đăng ký Facebook",
   "common.ui.goTo": "Đến phần điền thông tin",
   "common.ui.goToCart": "Đến giỏ hàng",
@@ -410,6 +437,8 @@
   "error.data.fetch": "Bị lỗi",
   "error.event.checkSameCodeName": "網址代碼已被使用",
   "error.event.checkSamePassword": "Vui lòng xác nhận mật khẩu giống với mật khẩu mới",
+  "error.event.duplicateCouponCode": "該折扣碼碼已被使用",
+  "error.event.duplicateVoucherCode": "該兌換碼已被使用",
   "error.event.failedFacebookLogin": "Không thể đăng nhập/ đăng ký từ Facebook",
   "error.event.failedGoogleLogin": "Không thể đăng nhập/ đăng ký từ Goolge",
   "error.event.updateIssueFailed": "Không thể cập nhật câu trả lời",
@@ -436,33 +465,81 @@
   "membershipCard.label.selectMembershipCard": "Chọn thẻ hội viên",
   "merchandise.label.abstract": "規格說明",
   "merchandise.label.basicSettings": "基本設定",
+  "merchandise.label.comment": "備註",
   "merchandise.label.cover": "封面圖片",
   "merchandise.label.delete": "刪除商品",
   "merchandise.label.description": "商品詳情",
+  "merchandise.label.familyMart": "全家超商取貨",
+  "merchandise.label.hiLife": "萊爾富超商取貨",
+  "merchandise.label.homeDelivery": "宅配",
   "merchandise.label.images": "商品圖片",
   "merchandise.label.introduction": "商品介紹",
+  "merchandise.label.inventoryAdmin": "庫存管理",
+  "merchandise.label.meta": "規格說明",
+  "merchandise.label.okMart": "OK超商取貨",
   "merchandise.label.paymentLink": "付款連結",
   "merchandise.label.price": "商品售價",
   "merchandise.label.publishAdmin": "上架設定",
+  "merchandise.label.quantity": "數量",
   "merchandise.label.salesAdmin": "銷售設定",
   "merchandise.label.settings": "商品資訊",
+  "merchandise.label.settingsAdmin": "賣場資訊",
+  "merchandise.label.sevenEleven": "7-11超商取貨",
+  "merchandise.label.shippingFee": "運費",
+  "merchandise.label.shippingMethod": "寄送方式",
+  "merchandise.label.shippingMethodsAdmin": "物流設定",
+  "merchandise.label.shopTitle": "賣場名稱",
+  "merchandise.label.specification": "規格",
+  "merchandise.label.status": "狀態",
+  "merchandise.status.arrange": "調整庫存",
+  "merchandise.status.currentInventory": "現有庫存",
+  "merchandise.status.inOperation": "經營中",
+  "merchandise.status.inactivated": "未啟用",
   "merchandise.status.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
   "merchandise.status.publishedNotation": "現在你的商品已發佈，此商品會出現在頁面上。",
   "merchandise.status.selling": "販賣中",
+  "merchandise.status.shipped": "已出貨",
+  "merchandise.status.shipping": "待出貨",
   "merchandise.status.unpublished": "未上架",
   "merchandise.status.unpublishedNotation": "你的商品未發佈，此商品並不會顯示在頁面上。",
   "merchandise.text.deleteDescription": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
-  "merchandise.text.deleteImage": "刪除圖片",
   "merchandise.text.deleteWarning": "一經刪除即不可恢復，確定要刪除嗎？",
+  "merchandise.text.estimatedShippingDays": "預估寄送天數",
   "merchandise.text.imageTips": "建議圖片尺寸：600*600px 以上",
-  "merchandise.text.noAbstract": "尚未填寫規格",
   "merchandise.text.noLink": "尚未設定付款連結",
+  "merchandise.text.noMatchingItems": "沒有任何符合項目",
+  "merchandise.text.noMeta": "尚未填寫規格",
   "merchandise.text.noPrice": "尚未設定售價",
+  "merchandise.text.noShippingDays": "尚未填寫寄送天數",
+  "merchandise.text.noShippingMethod": "尚未設定物流",
+  "merchandise.text.noShopTitle": "尚未填寫商店名稱",
   "merchandise.text.noTitle": "尚未填寫名稱",
+  "merchandise.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可啟用你的商城",
+  "merchandise.text.notice": "※ 請告知買家物流編號與寄送時間，以利買家追蹤商品寄送狀態",
+  "merchandise.text.publishedNotation": "現在你的商城已啟用，你的所有商品會出現在頁面上。",
+  "merchandise.text.purchase": "購買",
   "merchandise.text.searchMerchandise": "搜尋商品名稱",
-  "merchandise.text.setCover": "設為封面",
+  "merchandise.text.searchMerchandiseOrder": "搜尋訂單編號、商品名稱",
+  "merchandise.text.unpublishedNotation": "你的商城未啟用，你的所有商品並不會顯示在頁面上。",
+  "merchandise.ui.cancelNotice": "取消通知",
   "merchandise.ui.createMerchandise": "建立商品",
+  "merchandise.ui.deleteImage": "刪除圖片",
   "merchandise.ui.deleteMerchandise": "刪除商品",
+  "merchandise.ui.modifyInventory": "調整庫存",
+  "merchandise.ui.noMerchandiseOrder": "沒有任何商品記錄",
+  "merchandise.ui.seller": "賣家通知",
+  "merchandise.ui.send": "送出",
+  "merchandise.ui.setCover": "設為封面",
+  "merchandise.ui.shipped": "已出貨",
+  "merchandise.ui.shippingAddress": "收件地址",
+  "merchandise.ui.shippingInfo": "收件資訊",
+  "merchandise.ui.shippingMail": "收件人信箱",
+  "merchandise.ui.shippingMethod": "收件方式",
+  "merchandise.ui.shippingName": "收件姓名",
+  "merchandise.ui.shippingNotice": "通知出貨",
+  "merchandise.ui.shippingPhone": "收件人電話",
+  "merchandiseMessages.label.setSalePrice": "設定優惠價",
+  "merchandiseMessages.label.setSellingTime": "限定販售時間",
   "notification.term.notification": "Thông báo",
   "notification.ui.checkNotifications": "Xem thông báo",
   "notification.ui.markAllAsRead": "Tất cả đánh dấu là đã đọc",
@@ -616,6 +693,7 @@
   "programPackage.ui.publish": "發售，課程組合上架後立即開賣",
   "programPackage.ui.subscription": "訂閱",
   "programPackage.ui.unpublish": "停售，此方案暫停對外銷售，並從課程組合中隱藏",
+  "promotion.label.allProductScope": "全站折抵",
   "promotion.label.availableDateRange": "Thời hạn",
   "promotion.label.constraint": "Nhu cầu tiêu dùng",
   "promotion.label.constraintAmount": "Tiêu dùng đến mức giảm giá  {amount} ",
@@ -625,12 +703,16 @@
   "promotion.label.exchangeItemsAmount": "Số lượng danh mục quy đổi",
   "promotion.label.forever": "Không có thời hạn sử dụng",
   "promotion.label.fromNow": "Ngay từ hôm nay",
+  "promotion.label.otherSpecificProduct": "其他特定項目",
   "promotion.label.price": "Số tiền {amount} USD",
   "promotion.label.ratio": "Tỉ lệ {amount}%",
+  "promotion.label.scope": "折抵模式",
+  "promotion.label.specificProductScope": "指定項目折抵",
   "promotion.label.unit": "Thẻ",
   "promotion.label.withoutConstraintAmount": "Giảm giá trực tiếp",
   "promotion.status.available": "Có thể sử dụng",
   "promotion.status.unavailable": "Đã hết hiệu lực",
+  "promotion.status.used": "已使用",
   "promotion.term.amount": "Số lượng",
   "promotion.term.couponCode": "Mã giảm giá",
   "promotion.term.couponCodes": "Các mã giảm giá",
@@ -647,6 +729,7 @@
   "promotion.text.exchangeItemsNumber": "Được đổi danh mục {number}",
   "promotion.text.exchangeNotation": "Voucher mất hiệu lực sau 1 lần sử dụng, xin vui lòng chỉ sử dụng 1 lần",
   "promotion.text.exchangedCount": "{exchanged}/{total} Thẻ",
+  "promotion.text.selectProducts": "選擇指定項目",
   "promotion.ui.addVoucher": "Thêm voucher",
   "promotion.ui.createCouponPlan": "Lập kế hoạch giảm giá",
   "promotion.ui.createVoucherPlan": "Lập kế hoạch khuyến mãi",
@@ -654,6 +737,7 @@
   "promotion.ui.editCouponPlan": "Chỉnh sửa kế hoạch giảm giá",
   "promotion.ui.editVoucherPlan": "Chỉnh sửa kế hoạch khuyến mãi",
   "promotion.ui.exchange": "Quy đổi",
+  "promotion.ui.exportCodes": "匯出代碼",
   "promotion.ui.random": "Ngẫu nhiên",
   "promotion.ui.useNow": "Sử dụng ngay",
   "upload.event.failed": "Đăng tải thất bại",
