--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -41,6 +41,10 @@
   "activity.ui.threshold": "At least",
   "activity.warning.selectSession": "Select Session",
   "appointment.label.allInstructors": "All Instructors",
+  "appointment.label.appointmentCanceledAt": "已於 {time} 取消預約",
+  "appointment.label.appointmentDate": "諮詢日期",
+  "appointment.label.appointmentIssue": "學員提問",
+  "appointment.label.appointmentResult": "諮詢重點紀錄",
   "appointment.label.createPeriod": "Create Period",
   "appointment.label.duration": "Duration (minutes)",
   "appointment.label.enrollments": "Enrollments",
@@ -61,6 +65,7 @@
   "appointment.label.status": "Status",
   "appointment.status.aboutToStart": "About to start",
   "appointment.status.available": "Available",
+  "appointment.status.canceled": "已取消",
   "appointment.status.enrolled": "Enrolled",
   "appointment.status.excluded": "Closed",
   "appointment.status.finished": "Finished",
@@ -71,6 +76,7 @@
   "appointment.term.periodType": "Period Type",
   "appointment.term.planTitle": "Title",
   "appointment.term.startedAt": "Start Time",
+  "appointment.text.appointmentResultNotation": "※此紀錄不會公開給學員看到",
   "appointment.text.durationTips": "設定單次預約服務的時間長度",
   "appointment.text.noDuration": "No duration.",
   "appointment.text.noListPrice": "No list price.",
@@ -83,6 +89,7 @@
   "appointment.text.timezone": "All the timings listed are in your timezone: {city} (GMT{timezone})",
   "appointment.text.unpublishedNotation": "預約方案未發佈，此方案並不會顯示在頁面上，學生也不能購買此方案。",
   "appointment.ui.addToCalendar": "Add to Calendar",
+  "appointment.ui.appointmentIssueAndResult": "提問紀錄單",
   "appointment.ui.appointmentText": "{name} made an appointment to {title}",
   "appointment.ui.close": "Close",
   "appointment.ui.createPlan": "Create Plan",
@@ -110,6 +117,11 @@
   "blog.ui.description": "Description",
   "blog.ui.postSetting": "Article Settings",
   "blog.ui.video": "Video",
+  "code.E_EMAIL_EXISTS": "電子信箱已存在",
+  "code.E_INPUT": "輸入資料有誤",
+  "code.E_SEND_EMAIL": "寄送信件失敗",
+  "code.E_USERNAME_EXISTS": "使用者名稱已存在",
+  "code.SUCCESS": "成功",
   "command.label.uploading": "Uploading",
   "common.event.loading": "Loading",
   "common.event.publishedSuccessfully": "Published Successfully",
@@ -139,8 +151,10 @@
   "common.label.consumption": "Consumption",
   "common.label.currentPassword": "Current Password",
   "common.label.currentPosition": "目前排序：{position}",
+  "common.label.date": "日期",
   "common.label.dateRange": "Date Range",
   "common.label.day": "day",
+  "common.label.days": "天",
   "common.label.discountDownPrice": "Discount Down Price",
   "common.label.draft": "Draft",
   "common.label.email": "Email",
@@ -182,6 +196,7 @@
   "common.label.orderLogId": "Order ID",
   "common.label.orderLogMemberEmail": "Member Email",
   "common.label.orderLogMemberName": "Member Name",
+  "common.label.orderLogPaymentDate": "付款日期",
   "common.label.orderLogPrice": "Order Price",
   "common.label.orderLogPriceTotal": "Order Total",
   "common.label.orderLogStatus": "Order Status",
@@ -239,6 +254,7 @@
   "common.menu.merchandiseCategory": "Categories",
   "common.menu.merchandiseIssues": "問答管理",
   "common.menu.merchandiseShipping": "出貨管理",
+  "common.menu.merchandiseShop": "商城管理",
   "common.menu.merchandises": "商品管理",
   "common.menu.ownerSettings": "Owner Settings",
   "common.menu.podcastAdmin": "Podcast",
@@ -256,6 +272,15 @@
   "common.menu.tempoDelivery": "節奏交付",
   "common.menu.voucherPlans": "Voucher Plans",
   "common.product.activityTicket": "Activity",
+  "common.product.allActivityTicket": "全部線下實體",
+  "common.product.allAppointmentPlan": "全部預約",
+  "common.product.allMerchandise": "全部商品",
+  "common.product.allPodcastPlan": "全部廣播訂閱頻道",
+  "common.product.allPodcastProgram": "全部廣播",
+  "common.product.allProgram": "全部單次課程",
+  "common.product.allProgramPackagePlan": "全部課程組合",
+  "common.product.allProgramPlan": "全部訂閱課程",
+  "common.product.allProjectPlan": "全部專案",
   "common.product.appointmentPlan": "Appointment",
   "common.product.card": "Card",
   "common.product.merchandise": "Merchandise",
@@ -339,6 +364,7 @@
   "common.text.locale": "It will only be displayed when the front desk is the designated language family.",
   "common.text.minutes": "{minutes} minutes",
   "common.text.noAssignedInstructor": "No assigned instructor.",
+  "common.text.period": "，",
   "common.text.purchasedAt": "{name} purchased at {date}",
   "common.text.resetPasswordNotation": "為了安全考量，請至信箱收信更換密碼",
   "common.text.sentResetPasswordMail": "已寄送重設密碼信",
@@ -377,6 +403,7 @@
   "common.ui.exportOrderDiscount": "Export Discounts",
   "common.ui.exportOrderLog": "Export Orders",
   "common.ui.exportOrderProduct": "Export Items",
+  "common.ui.exportProgramProgress": "匯出學習進度",
   "common.ui.facebookLogin": "Facebook login/register",
   "common.ui.goTo": "Go to Tab",
   "common.ui.goToCart": "Go to Cart",
@@ -410,6 +437,8 @@
   "error.data.fetch": "Loading Failed",
   "error.event.checkSameCodeName": "Code name is already used",
   "error.event.checkSamePassword": "Confirmed password is not match to new password",
+  "error.event.duplicateCouponCode": "該折扣碼碼已被使用",
+  "error.event.duplicateVoucherCode": "該兌換碼已被使用",
   "error.event.failedFacebookLogin": "login/register failed from Facebook",
   "error.event.failedGoogleLogin": "login/register failed from Google",
   "error.event.updateIssueFailed": "Update issue failed.",
@@ -436,33 +465,81 @@
   "membershipCard.label.selectMembershipCard": "Select Membership Card",
   "merchandise.label.abstract": "規格說明",
   "merchandise.label.basicSettings": "基本設定",
+  "merchandise.label.comment": "備註",
   "merchandise.label.cover": "封面圖片",
   "merchandise.label.delete": "刪除商品",
   "merchandise.label.description": "商品詳情",
+  "merchandise.label.familyMart": "全家超商取貨",
+  "merchandise.label.hiLife": "萊爾富超商取貨",
+  "merchandise.label.homeDelivery": "宅配",
   "merchandise.label.images": "商品圖片",
   "merchandise.label.introduction": "商品介紹",
+  "merchandise.label.inventoryAdmin": "庫存管理",
+  "merchandise.label.meta": "規格說明",
+  "merchandise.label.okMart": "OK超商取貨",
   "merchandise.label.paymentLink": "付款連結",
   "merchandise.label.price": "商品售價",
   "merchandise.label.publishAdmin": "上架設定",
+  "merchandise.label.quantity": "數量",
   "merchandise.label.salesAdmin": "銷售設定",
   "merchandise.label.settings": "商品資訊",
+  "merchandise.label.settingsAdmin": "賣場資訊",
+  "merchandise.label.sevenEleven": "7-11超商取貨",
+  "merchandise.label.shippingFee": "運費",
+  "merchandise.label.shippingMethod": "寄送方式",
+  "merchandise.label.shippingMethodsAdmin": "物流設定",
+  "merchandise.label.shopTitle": "賣場名稱",
+  "merchandise.label.specification": "規格",
+  "merchandise.label.status": "狀態",
+  "merchandise.status.arrange": "調整庫存",
+  "merchandise.status.currentInventory": "現有庫存",
+  "merchandise.status.inOperation": "經營中",
+  "merchandise.status.inactivated": "未啟用",
   "merchandise.status.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
   "merchandise.status.publishedNotation": "現在你的商品已發佈，此商品會出現在頁面上。",
   "merchandise.status.selling": "販賣中",
+  "merchandise.status.shipped": "已出貨",
+  "merchandise.status.shipping": "待出貨",
   "merchandise.status.unpublished": "未上架",
   "merchandise.status.unpublishedNotation": "你的商品未發佈，此商品並不會顯示在頁面上。",
   "merchandise.text.deleteDescription": "請仔細確認是否真的要刪除，因為一旦刪除就無法恢復。",
-  "merchandise.text.deleteImage": "刪除圖片",
   "merchandise.text.deleteWarning": "一經刪除即不可恢復，確定要刪除嗎？",
+  "merchandise.text.estimatedShippingDays": "預估寄送天數",
   "merchandise.text.imageTips": "建議圖片尺寸：600*600px 以上",
-  "merchandise.text.noAbstract": "尚未填寫規格",
   "merchandise.text.noLink": "尚未設定付款連結",
+  "merchandise.text.noMatchingItems": "沒有任何符合項目",
+  "merchandise.text.noMeta": "尚未填寫規格",
   "merchandise.text.noPrice": "尚未設定售價",
+  "merchandise.text.noShippingDays": "尚未填寫寄送天數",
+  "merchandise.text.noShippingMethod": "尚未設定物流",
+  "merchandise.text.noShopTitle": "尚未填寫商店名稱",
   "merchandise.text.noTitle": "尚未填寫名稱",
+  "merchandise.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可啟用你的商城",
+  "merchandise.text.notice": "※ 請告知買家物流編號與寄送時間，以利買家追蹤商品寄送狀態",
+  "merchandise.text.publishedNotation": "現在你的商城已啟用，你的所有商品會出現在頁面上。",
+  "merchandise.text.purchase": "購買",
   "merchandise.text.searchMerchandise": "搜尋商品名稱",
-  "merchandise.text.setCover": "設為封面",
+  "merchandise.text.searchMerchandiseOrder": "搜尋訂單編號、商品名稱",
+  "merchandise.text.unpublishedNotation": "你的商城未啟用，你的所有商品並不會顯示在頁面上。",
+  "merchandise.ui.cancelNotice": "取消通知",
   "merchandise.ui.createMerchandise": "建立商品",
+  "merchandise.ui.deleteImage": "刪除圖片",
   "merchandise.ui.deleteMerchandise": "刪除商品",
+  "merchandise.ui.modifyInventory": "調整庫存",
+  "merchandise.ui.noMerchandiseOrder": "沒有任何商品記錄",
+  "merchandise.ui.seller": "賣家通知",
+  "merchandise.ui.send": "送出",
+  "merchandise.ui.setCover": "設為封面",
+  "merchandise.ui.shipped": "已出貨",
+  "merchandise.ui.shippingAddress": "收件地址",
+  "merchandise.ui.shippingInfo": "收件資訊",
+  "merchandise.ui.shippingMail": "收件人信箱",
+  "merchandise.ui.shippingMethod": "收件方式",
+  "merchandise.ui.shippingName": "收件姓名",
+  "merchandise.ui.shippingNotice": "通知出貨",
+  "merchandise.ui.shippingPhone": "收件人電話",
+  "merchandiseMessages.label.setSalePrice": "設定優惠價",
+  "merchandiseMessages.label.setSellingTime": "限定販售時間",
   "notification.term.notification": "Notification",
   "notification.ui.checkNotifications": "read more",
   "notification.ui.markAllAsRead": "Mark all as read",
@@ -616,6 +693,7 @@
   "programPackage.ui.publish": "發售，課程組合上架後立即開賣",
   "programPackage.ui.subscription": "訂閱",
   "programPackage.ui.unpublish": "停售，此方案暫停對外銷售，並從課程組合中隱藏",
+  "promotion.label.allProductScope": "全站折抵",
   "promotion.label.availableDateRange": "Available Date",
   "promotion.label.constraint": "Constraint",
   "promotion.label.constraintAmount": "消費滿 {amount} 折抵",
@@ -625,12 +703,16 @@
   "promotion.label.exchangeItemsAmount": "Amount of Exchangeable Items",
   "promotion.label.forever": "Forever",
   "promotion.label.fromNow": "Now",
+  "promotion.label.otherSpecificProduct": "其他特定項目",
   "promotion.label.price": "{amount}",
   "promotion.label.ratio": "{amount}%",
+  "promotion.label.scope": "折抵模式",
+  "promotion.label.specificProductScope": "指定項目折抵",
   "promotion.label.unit": "張",
   "promotion.label.withoutConstraintAmount": "直接折抵",
   "promotion.status.available": "Available",
   "promotion.status.unavailable": "Unavailable",
+  "promotion.status.used": "已使用",
   "promotion.term.amount": "amount",
   "promotion.term.couponCode": "Coupon Code",
   "promotion.term.couponCodes": "Coupon",
@@ -647,6 +729,7 @@
   "promotion.text.exchangeItemsNumber": "可兌換 {number} 個項目",
   "promotion.text.exchangeNotation": "兌換券為一次使用後失效，請一次兌換完畢",
   "promotion.text.exchangedCount": "{exchanged}/{total} 張",
+  "promotion.text.selectProducts": "選擇指定項目",
   "promotion.ui.addVoucher": "Add Voucher",
   "promotion.ui.createCouponPlan": "Create",
   "promotion.ui.createVoucherPlan": "Create Voucher Plan",
@@ -654,6 +737,7 @@
   "promotion.ui.editCouponPlan": "Edit Coupon Plan",
   "promotion.ui.editVoucherPlan": "Edit Voucher Plan",
   "promotion.ui.exchange": "Exchange",
+  "promotion.ui.exportCodes": "匯出代碼",
   "promotion.ui.random": "Random",
   "promotion.ui.useNow": "Use",
   "upload.event.failed": "Upload failed",
