[FEATURE] export payment log data

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -208,6 +208,9 @@
   "common.label.orderProductPriceTotal": "Product Total",
   "common.label.orderProductType": "Product Type",
   "common.label.outdated": "Outdated",
+  "common.label.paymentNo": "交易編號",
+  "common.label.paymentCreatedAt": "交易時間",
+  "common.label.paymentPrice": "交易金額",
   "common.label.perDay": "per day",
   "common.label.perMonth": "per month",
   "common.label.perWeek": "per week",
@@ -404,6 +407,7 @@
   "common.ui.exportOrderDiscount": "Export Discounts",
   "common.ui.exportOrderLog": "Export Orders",
   "common.ui.exportOrderProduct": "Export Items",
+  "common.ui.exportPaymentLog": "交易明細",
   "common.ui.exportProgramProgress": "匯出學習進度",
   "common.ui.facebookLogin": "Facebook login/register",
   "common.ui.goTo": "Go to Tab",
