--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -208,6 +208,9 @@
   "common.label.orderProductPriceTotal": "Tổng tiền sản phẩm",
   "common.label.orderProductType": "Loại sản phẩm",
   "common.label.outdated": "Đã quá hạn",
+  "common.label.paymentNo": "交易編號",
+  "common.label.paymentCreatedAt": "交易時間",
+  "common.label.paymentPrice": "交易金額",
   "common.label.perDay": "Mỗi ngày",
   "common.label.perMonth": "Mỗi tháng",
   "common.label.perWeek": "Mỗi tuần",
@@ -404,6 +407,7 @@
   "common.ui.exportOrderDiscount": "Chi tiết giảm giá",
   "common.ui.exportOrderLog": "Xuất đơn hàng",
   "common.ui.exportOrderProduct": "訂單明細",
+  "common.ui.exportPaymentLog": "交易明細",
   "common.ui.exportProgramProgress": "匯出學習進度",
   "common.ui.facebookLogin": "Đăng nhập/ Đăng ký Facebook",
   "common.ui.goTo": "Đến phần điền thông tin",
